Further project re-structure, towards a blocks-oriented approach. Implemented a modular architecture for client-side scripts. - Ability to use CommonJS requires - Easy-to-navigate namespace - Index-Block require strategy (find block/name/index first, then block/name/name)

--- a/src/site/blocks/buttons/collapsible-menu-button/collapsible-menu-button.html
+++ b/src/site/blocks/buttons/collapsible-menu-button/collapsible-menu-button.html
@@ -1,3 +1,5 @@
-<div class="collapsible-menu-button">
+<div class="collapsible-menu-button"
+     data-block-name="blocks/buttons/collapsible-menu-button"
+     data-block-type="component">
     <button type="button">&#9776; {{site.title | upcase }}</button>
 </div>
