--- a/src/site/blocks/headers/documentation-header/documentation-header.html
+++ b/src/site/blocks/headers/documentation-header/documentation-header.html
@@ -3,6 +3,6 @@
         {% include toc/toc__menu-button.html %}
     </div>
     <div class="documentation-header__content">
-        {% include brand/simple.html %} &mdash; {{ site.subtitle }}
+        {% include brand/brand.html %} &mdash; {{ site.subtitle }}
     </div>
 </div>
