--- a/src/site/blocks/toc/toc__menu.html
+++ b/src/site/blocks/toc/toc__menu.html
@@ -1,6 +1,6 @@
-<nav class="pussshy__left-menu toc__menu">
+<nav class="toc__menu">
 
-    <ul class="pussshy__menu-items toc__menu-items">
+    <ul class="toc__menu-items">
 
         <li>
             <p>{{ site.title }}</p>
