--- a/src/site/blocks/nav/nav__menu-button.html
+++ b/src/site/blocks/nav/nav__menu-button.html
@@ -1,3 +1,3 @@
-<div class="pussshy__left-menu-button nav__menu-button">
+<div class="nav__menu-button">
     {% include buttons/collapsible-menu-button/collapsible-menu-button.html %}
 </div>
