--- a/src/site/blocks/nav/nav__menu.html
+++ b/src/site/blocks/nav/nav__menu.html
@@ -1,10 +1,10 @@
-<nav class="pussshy__left-menu nav__menu">
+<nav class="nav__menu">
 
     <div class="nav__menu-header">
-        {% include brand/simple.html %}
+        {% include brand/brand.html %}
     </div>
 
-    <ul class="pussshy__menu-items nav__menu-items">
+    <ul class="nav__menu-items">
         <li><a href="{{ site.baseurl }}/getting-started/overview/">Getting Started</a></li>
         <li><a href="{{ site.baseurl }}/documentation/installation">Documentation</a></li>
         <li><a href="{{ site.codeurl }}">Source</a></li>
