Finished landing page

--- a/src/site/blocks/footers/simple-footer/simple-footer.html
+++ b/src/site/blocks/footers/simple-footer/simple-footer.html
@@ -1,6 +1,6 @@
 <div class="simple-footer">
     <a href="#">
-        <img src="{{ site.asseturl }}/images/icons/1411844934_open-box.png" width="35" height="35" alt="">
+        <!--<img src="{{ site.asseturl }}/images/icons/1411844934_open-box.png" width="35" height="35" alt="">-->
     </a>
     <br/>
     <a href="{% if site.codeurl %}{{ site.codeurl }}{% else %}{{ site.baseurl }}{% endif %}">
