--- a/src/site/blocks/nav/nav__menu.html
+++ b/src/site/blocks/nav/nav__menu.html
@@ -6,7 +6,7 @@
 
     <ul class="nav__menu-items">
         <li><a href="{{ site.baseurl }}/getting-started/overview/">Getting Started</a></li>
-        <li><a href="{{ site.baseurl }}/documentation/installation">Documentation</a></li>
+        <li><a href="{{ site.baseurl }}/usages/overview">Documentation</a></li>
         <li><a href="{{ site.codeurl }}">Source</a></li>
     </ul>
 
