Minor error on landing page

--- a/src/site/pages/index.html
+++ b/src/site/pages/index.html
@@ -30,7 +30,7 @@ layout: page
             class="c"># navigate to your project</span>
     <span class="nv">$ </span>pecker init <span
             class="c"># initialize configuration file using the interactive CLI</span>
-    <span class="nv">$ </span>pecker <span class="c"># run build</span>
+    <span class="nv">$ </span>pecker build <span class="c"># run build</span>
 </code></pre>
     </div>
 
